# budsmokersonly

./: Cargo.toml
migrations/2021-11-04-122943_create_products/: down.sql  up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs  views.rs
templates/: new_cannabis_form.html  new_inventory_form.html  new_product_form.html
