[package]
name = "products"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
bigdecimal = "0.3.0"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
handlebars = { version = "4.1.3", features = ["dir_source"] }
r2d2 = "*"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0.130"
serde_json = "1"
